# exercise-1-and-2

./: Cargo.toml
data/node1/chains/local_testnet/db/: 000107.sst  000108.sst  000109.sst  000110.sst  000111.sst  000113.sst  000118.sst  000126.sst  IDENTITY  LOG  MANIFEST-000114  OPTIONS-000117
data/node1/chains/local_testnet/network/: secret_ed25519
data/node2/chains/local_testnet/db/: 000034.sst  000112.sst  000113.sst  000114.sst  000115.sst  000116.sst  000118.sst  000123.sst  000131.sst  IDENTITY  LOG  MANIFEST-000119  OPTIONS-000038
data/node2/chains/local_testnet/network/: secret_ed25519
pallets/nodle/: Cargo.toml
pallets/nodle/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
