[package]
name = "pallet-nodle"
version = "0.1.0"
authors = ["Alfredo Lopez <alfredolopez80@gmail.com>"]
description = 'FRAMEV2 pallet for Nodle'
edition = "2018"
readme = 'README.md'
repository = 'https://github.com/alfredolopez80/nodle-pallet/'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
]
